Fixed victorydisplay overlap

--- a/css/TicTacoToeEmbedded.css
+++ b/css/TicTacoToeEmbedded.css
@@ -73,8 +73,8 @@
 	height: 50px;
 	width: 380px;
 
-	top: 490px;
-	left: 50%;
+	top: 540px;
+	left: 250px;
 
 	margin-left: -190px
 }
